# WorldHelipads

./: .gitignore  01_retrieve_data.py  02_filter_and_merge.py  04.export_lnm.py  04_export_lnm.py  README.md  config.py  pyproject.toml
data/raw/openaip/: ad_apt.json  ae_apt.json  af_apt.json  ag_apt.json  ai_apt.json  al_apt.json  am_apt.json  ao_apt.json  aq_apt.json  ar_apt.json  as_apt.json  at_apt.json  au_apt.json  aw_apt.json  ax_apt.json  az_apt.json  ba_apt.json  bb_apt.json  bd_apt.json  be_apt.json  bf_apt.json  bg_apt.json  bh_apt.json  bi_apt.json  bj_apt.json  bl_apt.json  bm_apt.json  bn_apt.json  bo_apt.json  bs_apt.json  bt_apt.json  bw_apt.json  by_apt.json  bz_apt.json  ca_apt.json  cc_apt.json  cd_apt.json  cf_apt.json  cg_apt.json  ch_apt.json  (+192 more)
data/raw/osm/heli/: (-10.0, -10.0, 0.0, 0.0).json  (-10.0, -100.0, 0.0, -90.0).json  (-10.0, -150.0, 0.0, -140.0).json  (-10.0, -20.0, 0.0, -10.0).json  (-10.0, -40.0, 0.0, -30.0).json  (-10.0, -50.0, 0.0, -40.0).json  (-10.0, -60.0, 0.0, -50.0).json  (-10.0, -70.0, 0.0, -60.0).json  (-10.0, -80.0, 0.0, -70.0).json  (-10.0, -90.0, 0.0, -80.0).json  (-10.0, 0.0, 0.0, 10.0).json  (-10.0, 10.0, 0.0, 20.0).json  (-10.0, 100.0, 0.0, 110.0).json  (-10.0, 110.0, 0.0, 120.0).json  (-10.0, 120.0, 0.0, 130.0).json  (-10.0, 130.0, 0.0, 140.0).json  (-10.0, 140.0, 0.0, 150.0).json  (-10.0, 150.0, 0.0, 160.0).json  (-10.0, 160.0, 0.0, 170.0).json  (-10.0, 20.0, 0.0, 30.0).json  (-10.0, 30.0, 0.0, 40.0).json  (-10.0, 50.0, 0.0, 60.0).json  (-10.0, 70.0, 0.0, 80.0).json  (+288 more)
flightim.to/: README.md  make_data.sh
(+384 files in other folders)
